@@ -79,6 +79,8 @@ namespace K3bCdDevice
 	DISKINFO,
 	NG_DISKINFO,
 	TOC,
+	DISKINFO_ISRC_MCN,
+	ISRC_MCN,
 	CD_TEXT,
 	CD_TEXT_RAW,
 	DISKSIZE,
